# autuofm-walking-gait

./: .gitignore  CMakeLists.txt
conf/: arash.json  arash.original.json
libs/: .gitignore  README.md
python/: legTrajectories.py
src/: consts.h  main.cpp
src/configuration/: configuration.cpp  configuration.h
src/data/: angle.cpp  angle.h  configuration.cpp  configuration.h  json.cpp  json.h  servo.cpp  servo.h  vector.cpp  vector.h
src/engine/: ik.cpp  ik.h  part.cpp  part.h  robot.cpp  robot.h
src/motors/: factory.cpp  factory.h  motorsupdater.cpp  motorsupdater.h  motorupdater.cpp  motorupdater.h  robot.cpp  robot.h  servo.cpp  servo.h  simumotorupdater.cpp  simumotorupdater.h  simurobot.cpp  simurobot.h  simuservo.cpp  simuservo.h
src/networking/: client.cpp  client.h  controller.cpp  controller.h  server.cpp  server.h
src/sensors/: gyro.cpp  gyro.h  imu.cpp  imu.h  mpu.cpp  mpu.h
test/configuration/: configuration_test.cpp
test/resources/: config.json
